todo model and view defined

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<script type="html/template" id="todo-template">
-    <span><%= name %></span>
+    <span><%= text %></span>
 	</script>
 	<script type="html/template" id="list-template">
     <section class="todos"></section>
