--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,12 @@
   <script src="js/jquery.js"></script>
   <script src="js/underscore.js"></script>
   <script src="js/backbone.js"></script>
-  <script src="js/script.js"></script>
+  <script src="js/coffeeScript.js"></script>
 </head>
 <body>
 	<script type="html/template" id="todo-template">
     <span><%= text %></span>
 	</script>
-	<script type="html/template" id="list-template">
-    <section class="todos"></section>
-	</script>
+  <ul class="todoList"></ul>
 </body>
 </html>
