--- a/finished-version/public/index.html
+++ b/finished-version/public/index.html
@@ -6,7 +6,7 @@
   <script src="js/jquery.js"></script>
   <script src="js/underscore.js"></script>
   <script src="js/backbone.js"></script>
-  <script src="js/coffeeScript.js"></script>
+  <script src="js/script.js"></script>
 </head>
 <body>
 	<script type="html/template" id="todo-template">
